--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
+        "php": "^8.2",
         "elasticsearch/elasticsearch": "^8.0"
     },
     "require-dev": {
-        "pestphp/pest": "^2.0"
+        "pestphp/pest": "^3.0"
     },
     "config": {
         "allow-plugins": {
